# Xi

./: .gitignore  CMakeLists.txt  README.md  Xi.sln
Test/: Test.cpp  Test.vcxproj
XiEngine/: XiEngine.vcxproj  XiEngine.vcxproj.filters
XiEngine/xiengine/: TODO.txt
XiEngine/xiengine/assets/: baseAsset.h
XiEngine/xiengine/core/: program.cpp  program.h
XiEngine/xiengine/engine/: engine.cpp  engine.h  entity.cpp  scene.cpp  scene.h
XiEngine/xiengine/graphics/: vao.h
XiEngine/xiengine/rendering/: renderingEngine.h  window.cpp  window.h
XiEngine/xiengine/utils/: file.h
XiMath/: XiMath.vcxproj  XiMath.vcxproj.filters
XiMath/ximath/: matrix3.cpp  matrix4.cpp  quaternion.cpp  vector3.cpp
XiPhysics/: XiPhysics.vcxproj  XiPhysics.vcxproj.filters
lib/assimp/lib/: assimp.lib
lib/glad/src/: glad.c
res/shaders/: basicShader.fs  coordAxes.frag  coordAxes.vert  debug.frag  debug.vert  entityShader.fs  entityShader.vs  models.vert  temporary.frag  temporary.vert  terrain.frag  terrain.vert  textShader.frag  textShader.vert
res/shaders/common/: uniforms.glsl
src/XiEngine/: TODO.txt  camera.cpp  camera.h  input.cpp  main.cpp  precompiled.h  test.cpp  testing.h
src/XiEngine/core/: camera.cpp  camera.h  core.cpp  core.h  coreEngine.cpp  coreEngine.h  entity.cpp  entity.h  input.cpp  input.h  program.cpp  program.h  scene.cpp  scene.h  time.cpp  time.h  transform.cpp  transform.h
src/XiEngine/graphics/: camera.cpp  camera.h  commandBuffer.cpp  commandBuffer.h  debugRenderer.cpp  debugRenderer.h  drawable.cpp  drawable.h  geometry.cpp  geometry.h  graphics.cpp  graphics.h  graphicsDefs.cpp  graphicsDefs.h  indexBuffer.cpp  indexBuffer.h  material.cpp  material.h  mesh.cpp  mesh.h  meshRenderer.cpp  meshRenderer.h  renderingEngine.cpp  renderingEngine.h  shader.cpp  shader.h  texture.cpp  texture.h  vertex.cpp  vertex.h  vertexBuffer.cpp  vertexBuffer.h  window.cpp  window.h
src/XiEngine/lib/: FastNoise.cpp  SimplexNoise.cpp  SimplexNoise.h
src/XiEngine/math/: boundingBox.cpp  boundingBox.h  color.cpp  color.h  (+23 more)
src/XiMath/: eulerAngles.cpp  eulerAngles.h  matrix3.h  todo.txt  utils.cpp  utils.h  vector2.cpp  vector2.h  vector3.h  vector4.cpp
(+116 files in other folders)
